# surf_2024

./: .gitignore  AnalysisOutput.root  CMakeLists.txt  README.md  RISQTutorial.cc  main.cc  output.root
AnalysisTools/: AnalysisOutput.root  RISQTutorialAnalysis.cc
G4Macros/: throwPhonon.mac  throwPhoton.mac
analysis/: RISQ_analysis.cc  analysis.cc  analysis.ipynb  matthew.cc  output.root
include/: Action_Initialization.hh  Config_Manager.hh  Config_Messenger.hh  Custom_Physics.hh  Detector.hh  Electrode.hh  Kaplan_QP.hh  PSActionInitialization.hh  PSElectrode.hh  PSEventAction.hh  PSKaplanQP.hh  PSPhonon.hh  PSPhysics.hh  PSPhysicsList.hh  PSPrimaryGeneratorAction.hh  PSQP.hh  PSSteppingAction.hh  Phonon.hh  Physics_List.hh  Primary_Action.hh  Quasiparticle.hh  RISQTutorialDetectorConstruction.hh  RISQ_Detector.hh  RISQ_Sensitivity.hh  Single_KID.hh  Stepping_Action.hh
macros/: direct  muon  phonon  photon  prep  simulate  single  single_phonon  single_phonon_low  single_photon  study  study_phonon  study_photon
src/: Action_Initialization.cc  Config_Manager.cc  Config_Messenger.cc  Custom_Physics.cc  Detector.cc  Electrode.cc  Kaplan_QP.cc  PSActionInitialization.cc  PSElectrode.cc  PSEventAction.cc  PSKaplanQP.cc  PSPhonon.cc  PSPhysics.cc  PSPhysicsList.cc  PSPrimaryGeneratorAction.cc  PSQP.cc  PSSteppingAction.cc  Phonon.cc  Physics_List.cc  Primary_Action.cc  Quasiparticle.cc  RISQTutorialDetectorConstruction.cc  RISQ_Detector.cc  RISQ_Sensitivity.cc  Single_KID.cc  Stepping_Action.cc
